log
Thu 14 Sep 2023 12:59:06 PM UTC: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:45:22: error: expected expression before ‘TreeMap’
   45 |   return nextTreeMap(TreeMap *tree);
      |                      ^~~~~~~
treemap.c:46:1: error: control reaches end of non-void function [-Werror=return-type]
   46 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
01e0fd0
